Overflow issue fixed

--- a/css/style.css
+++ b/css/style.css
@@ -71,23 +71,20 @@ div {
     box-sizing: border-box;
 }
 
+/*Adding overflow:hidden seems to fix spacing issue, unsure if that
+could cause problems when lists get longer*/
 .preview {
     background-color:#DDDBCB;
     height: 100%;
+    overflow: hidden;
 }
 
 
-.imgPreview img{
+.picture{
     display: block;
     margin: 0 auto;
-}
-
-.picture {
-    padding: 10px;
     width: 100%;
     height: 100%;
-    width: calc(100% - 20px);
-    height: calc(100% - 20px);
 }
 
 p {
@@ -99,7 +96,7 @@ p {
 }
 
 .preview ul {
-    padding-bottom: 20px;
+    padding-bottom: 10px;
 }
 .preview li {
     text-align: center;
@@ -109,38 +106,27 @@ p {
 }
 
 .hoverCTA {
-    padding: 3px 5px 3px 5px;
     display: block;
     margin: 0 auto;
     font-weight: bold;
     font-size: 30px;
-    
-
 }
 
 /*Grid Structure*/
 
 .imgPreview {
     grid-area: imgPreview;
-    width: 100%;
-    height: 100%;
 }
 
 .selfPreview {
     grid-area: selfPreview;
-    width: 100%;
-    height: 100%;
 }
 .workPreview{
     grid-area: workPreview;
-    width: 100%;
-    height: 100%;
 }
 
 .skillsPreview {
     grid-area: skillsPreview;
-    width: 100%;
-    height: 100%;
 }
 
 .heroGrid {
@@ -151,8 +137,6 @@ p {
     grid-template-areas:
         "imgPreview imgPreview selfPreview selfPreview selfPreview"
         "workPreview workPreview workPreview skillsPreview skillsPreview";
-    align-items: center;
-    justify-items: center;
     row-gap: 10px;
     column-gap: 10px;
     
@@ -258,7 +242,7 @@ p {
     /*height: auto*/
     /*outline-style: dotted;
     outline-color: blue;*/
-    grid-template-rows: 15% 30% 45% 10%; /*repeat(4, 1fr);*/
+    grid-template-rows: 15% 30% 45% 10%; 
     grid-template-columns: 1fr 1fr;
     grid-template-areas:
         "ppages localeyes"
@@ -381,8 +365,6 @@ button {
     .workGrid {
         display: grid;
         /*height: auto*/
-        outline-style: dotted;
-        outline-color: blue;
         grid-template-rows: repeat(8, 1fr);
         grid-template-columns: 1fr;
         grid-template-areas:
